feat: add AI Role-playing Game Master
- Add new words "chara" and "gamemaster" to the VS Code spell-check settings.
- Add two new binary image files to the project.
- Add a README file for the "AI Role-playing Game Master" project, describing its features, setup, and usage in Traditional Chinese.
- Introduce a configuration file `basic.prompty` for defining the parameters, inputs, and outputs of the AI-based role-playing game system.

Signed-off-by: CHEN, CHUN <jim60105@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
+        "chara",
         "Civitai",
         "Dify",
+        "endfor",
         "fakekey",
+        "gamemaster",
         "Playboard",
         "prompty",
         "toolsai"
