--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "gamemaster",
         "Playboard",
         "prompty",
-        "toolsai"
+        "toolsai",
+        "Waifu"
     ],
     "prompty.currentModelConfiguration": "default",
     "prompty.modelConfigurations": [
