feat: add Automated Prompt Engineering
- Add a new word `OPRO` to the spell-check dictionary in `.vscode/settings.json`.
- Update the README to include a new section for "Automated Prompt Engineering" with sub-tools for "Scoring Criteria Maker" and "Simple Prompt Maker".
- Introduce a new tool, `Automated Prompt Engineering`, including multiple `.prompty` files for tasks like basic setup, target generation, evaluation, and optimization.
- Add a detailed README for the `Automated Prompt Engineering` tool, explaining its purpose, methodology, and related links.

Signed-off-by: CHEN, CHUN <jim60105@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "endfor",
         "fakekey",
         "gamemaster",
+        "OPRO",
         "Playboard",
         "prompty",
         "toolsai",
