feat(english-textbook-generation-assistant): add new prompt files and update existing ones for improved functionality
Signed-off-by: CHEN, CHUN <jim60105@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "gamemaster",
         "OPRO",
         "Playboard",
+        "privatebin",
         "prompty",
         "toolsai",
         "Waifu"
