--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,3 @@
-AZURE_OPENAI_ENDPOINT=https://your.openai.azure.com
-AZURE_OPENAI_API_KEY=fakekey
-AZURE_OPENAI_DEPLOYMENT=gpt-4o
+OPENAI_ENDPOINT=https://your.openai.azure.com
+OPENAI_API_KEY=fakekey
+OPENAI_DEPLOYMENT=gpt-4o
