feat(sdxl-image-prompt-assistant): add SDXL Image Prompt Assistant
- Add "booru" and "SDXL" to the list of custom words recognized by the VSCode spell checker.
- Added a new entry for the SDXL Image Prompt Assistant, including its description, documentation link, and Coze link, to the list of available LLM agents.
- Add a comprehensive and detailed system prompt configuration for an SDXL Image Prompt Assistant, outlining expected input/output schemas, step-by-step prompt generation workflow, ethical content guidelines, and constraints for automated Booru tag prompt creation.
- Add a new prompt template for extracting and formatting SDXL image prompts from assistant chat history, with strict instructions on accuracy, JSON formatting, and handling of positive prompts only.
- Add a new README in Traditional Chinese describing features, usage, technical points, and sample prompts for the SDXL Image Prompt Assistant, an AI tool for generating and optimizing SDXL Booru tag prompts.

Signed-off-by: CHEN, CHUN <jim60105@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "booru",
         "chara",
         "Civitai",
         "Dify",
@@ -10,6 +11,7 @@
         "Playboard",
         "privatebin",
         "prompty",
+        "SDXL",
         "toolsai",
         "Waifu"
     ],
